--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -289,6 +289,31 @@ html ::-webkit-scrollbar-thumb {
   display: none !important;
 }
 
+//callout - Subscribe
+.notion-callout .bg-orange-light{
+    padding: 0 !important;
+    margin: 0 !important;
+    background: none !important;
+    border: none !important;
+
+    .notion-callout__content{
+        max-width: 800px !important;
+        display: flex !important;
+        flex-wrap: wrap !important;
+        justify-content: center !important;
+        margin: 0 auto !important;
+        gap: 3rem !important;
+
+        .notion-image{
+            max-width: 180px !important;
+            padding: 5px 16px !important;
+            border-radius: 0px !important;
+            width: auto !important;
+            height: auto !important;
+        }
+    }
+}
+
 
 //callout - About us
 
