--- a/style/main.css
+++ b/style/main.css
@@ -669,6 +669,28 @@ html ::-webkit-scrollbar-thumb {
   display: none !important;
 }
 
+.notion-callout .bg-orange-light {
+  padding: 0 !important;
+  margin: 0 !important;
+  background: none !important;
+  border: none !important;
+}
+.notion-callout .bg-orange-light .notion-callout__content {
+  max-width: 800px !important;
+  display: flex !important;
+  flex-wrap: wrap !important;
+  justify-content: center !important;
+  margin: 0 auto !important;
+  gap: 3rem !important;
+}
+.notion-callout .bg-orange-light .notion-callout__content .notion-image {
+  max-width: 180px !important;
+  padding: 5px 16px !important;
+  border-radius: 0px !important;
+  width: auto !important;
+  height: auto !important;
+}
+
 #page-index .notion-callout.bg-gray-light {
   width: 100vw !important;
   margin-left: -50vw !important;
