--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -290,7 +290,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 //callout - Subscribe
-.notion-callout .bg-orange-light{
+#page-index .notion-callout .bg-orange-light{
     padding: 0 !important;
     margin: 0 !important;
     background: none !important;
@@ -314,6 +314,12 @@ html ::-webkit-scrollbar-thumb {
     }
 }
 
+#page-index .notion-callout.bg-orange-light:hover{
+    box-shadow: none !important;
+    border: none !important;
+    transform: none !important;
+    cursor: pointer !important;
+}
 
 //callout - About us
 
