--- a/style/main.css
+++ b/style/main.css
@@ -838,6 +838,9 @@ html ::-webkit-scrollbar-thumb {
     width: 100% !important;
     margin-inline-start: 0 !important;
   }
+  #page-index .notion-callout.bg-gray-light .notion-callout__content {
+    width: 100% !important;
+  }
 }
 .notion-toggle.bg-pink {
   display: none;
