--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
 .theme-blackout body {
   --color-bg-default: rgb(32, 32, 32) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
@@ -98,6 +97,34 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate !important;
 }
 
+@font-face {
+  font-family: "ClashDisplay-Semibold";
+  src: url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Semibold.woff2") format("woff2"), url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Semibold.woff") format("woff");
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "ClashDisplay-Medium";
+  src: url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Medium.woff2") format("woff2"), url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Medium.woff") format("woff");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "ClashDisplay-Regular";
+  src: url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Regular.woff2") format("woff2"), url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Regular.woff") format("woff");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "GeneralSans-Regular";
+  src: url("https://evenbloom.github.io/catch-podcast/fonts/GeneralSans-Regular.woff2") format("woff2"), url("https://evenbloom.github.io/catch-podcast/fonts/GeneralSans-Regular.woff") format("woff");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
 :root {
   --font-size-0: 1rem;
   --font-size-1: 1.125rem;
@@ -109,8 +136,12 @@ p, h1, h2, h3, h4, h5, h6 {
   --font-size-7: 5.5rem;
 }
 
+html, body {
+  font-family: "GeneralSans-Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+}
+
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Inter", sans-serif !important;
+  font-family: "ClashDisplay-Medium", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
 }
 
 h1.notion-heading {
@@ -121,6 +152,7 @@ h1.notion-heading {
 }
 
 h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
+  font-family: "ClashDisplay-Semibold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
   font-weight: 700 !important;
   line-height: 1 !important;
 }
