--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -310,6 +310,10 @@ html ::-webkit-scrollbar-thumb {
             border-radius: 0px !important;
             width: auto !important;
             height: auto !important;
+
+            img{
+                border-radius: 0 !important;
+            }
         }
     }
 }
