--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,23 +1,23 @@
 //typography rules
 
 @font-face {
-  font-family: 'ClashDisplay-Semibold';
-  src: url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Semibold.woff2") format("woff2"), url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Semibold.woff") format("woff");
+  font-family: 'ClashGrotesk-Semibold';
+  src: url("https://evenbloom.github.io/catch-podcast/fonts/ClashGrotesk-Semibold.woff2") format("woff2"), url("https://evenbloom.github.io/catch-podcast/fonts/ClashGrotesk-Semibold.woff") format("woff");
   font-weight: 700;
   font-display: swap;
   font-style: normal; }
 
   @font-face {
-    font-family: 'ClashDisplay-Medium';
-    src: url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Medium.woff2") format('woff2'), url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Medium.woff") format("woff");
+    font-family: 'ClashGrotesk-Medium';
+    src: url("https://evenbloom.github.io/catch-podcast/fonts/ClashGrotesk-Medium.woff2") format('woff2'), url("https://evenbloom.github.io/catch-podcast/fonts/ClashGrotesk-Medium.woff") format("woff");
     font-weight: 500;
     font-display: swap;
     font-style: normal;
 }
 
 @font-face {
-  font-family: 'ClashDisplay-Regular';
-  src: url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Regular.woff2") format("woff2"), url("https://evenbloom.github.io/catch-podcast/fonts/ClashDisplay-Regular.woff") format("woff");
+  font-family: 'ClashGrotesk-Regular';
+  src: url("https://evenbloom.github.io/catch-podcast/fonts/ClashGrotesk-Regular.woff2") format("woff2"), url("https://evenbloom.github.io/catch-podcast/fonts/ClashGrotesk-Regular.woff") format("woff");
   font-weight: 400;
   font-display: swap;
   font-style: normal; }
