--- a/style/main.css
+++ b/style/main.css
@@ -261,6 +261,11 @@ p, p.notion-text__content {
   padding-left: 0px !important;
 }
 
+.super-navbar .super-navbar__content .super-navbar__item-list .super-navbar__item {
+  text-transform: uppercase !important;
+  font-family: "ClashGrotesk-Semibold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+}
+
 /* .super-navbar__menu-wrapper{
      width: calc(100% - 193px) !important;
     max-width: calc(1680px - 200px) !important;
