--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -260,6 +260,7 @@ tbody.notion-collection-table__body{
     padding: 0.8rem 1.6rem !important;
     font-family: "ClashGrotesk-Semibold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
     margin: 20px 0px !important;
+    text-transform: uppercase !important;
     font-size: var(--font-size-1) !important;
     letter-spacing: 0.05rem !important;
     border-radius: 50px !important;
