--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -22,6 +22,8 @@
 .super-navbar__cta{
     text-transform: uppercase !important;
     font-family: "ClashGrotesk-Semibold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+    font-size: 0.9rem !important;
+    letter-spacing: 0.102rem !important;
     background: var(--color-cta-background) !important;
 
 }
