--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -49,8 +49,11 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h1.notion-heading{
+    font-family: "ClashGrotesk-Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
     font-size: var(--font-size-6) !important;
     font-weight: 500 !important;
+    max-width: 50rem !important;
+    top: -1rem !important;
     line-height: 1em !important;
     margin-bottom: 1rem !important;
 }
