--- a/style/main.css
+++ b/style/main.css
@@ -145,7 +145,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1.notion-heading {
-  font-family: "ClashGrotesk-Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+  font-family: "ClashGrotesk-Semibold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
   font-size: var(--font-size-6) !important;
   font-weight: 500 !important;
   max-width: 50rem !important;
