fir content-reviews

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -401,6 +401,10 @@ html ::-webkit-scrollbar-thumb {
 
     .notion-column-list{
         flex-wrap: wrap !important;
+
+        .notion-column:first-child{
+            max-width: fit-content !important;
+        }
     }
 
 }
