--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -551,8 +551,18 @@ html ::-webkit-scrollbar-thumb {
 }
 
 @media screen and (max-width:992px){
-    .notion-column{
-       flex-grow:1 !important; 
+    .notion-callout.border {
+        .notion-column-list{
+        display: grid !important;
+        grid-template-columns: 1fr 1fr !important;
+
+            .notion-column{
+                width: 100% !important;
+            }
+            }
+        }
+
     }
+    
 }
 
