--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -24,6 +24,7 @@
     font-family: "ClashGrotesk-Semibold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
     font-size: 0.9rem !important;
     letter-spacing: 0.102rem !important;
+    color: var(--color-cta-text) !important;
     background: var(--color-cta-background) !important;
 
 }
