--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -389,6 +389,17 @@ html ::-webkit-scrollbar-thumb {
 
 
 //callouts--Reviews
+
+#page-index .notion-callout.green-light {
+    background: transparent !important;
+}
+
+#page-index .notion-callout.bg-green-light:hover{
+    box-shadow: none !important;
+    border: none !important;
+    transform: none !important;
+}
+
 .notion-callout{
     padding: 25px !important;
     padding-top: 20px !important;
@@ -551,7 +562,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 @media screen and (max-width:992px){
-    .notion-callout.border {
+    .notion-callout.green-light {
         .notion-column-list{
         display: grid !important;
         grid-template-columns: 1fr 1fr !important;
