--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -388,7 +388,7 @@ html ::-webkit-scrollbar-thumb {
 
 
 
-//callouts--Reviews
+//callouts-Reviews
 
 #page-index .notion-callout.green-light {
     background: transparent !important;
