--- a/style/main.css
+++ b/style/main.css
@@ -819,6 +819,7 @@ html ::-webkit-scrollbar-thumb {
 
 #page-index .notion-callout.bg-green-light {
   background: transparent !important;
+  border: none !important;
 }
 
 #page-index .notion-callout.bg-green-light:hover {
