--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -392,6 +392,8 @@ html ::-webkit-scrollbar-thumb {
 
 #page-index .notion-callout.bg-green-light {
     background: transparent !important;
+    border: none !important;
+
 }
 
 #page-index .notion-callout.bg-green-light:hover{
