--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -393,6 +393,13 @@ html ::-webkit-scrollbar-thumb {
 #page-index .notion-callout.bg-green-light {
     background: transparent !important;
     border: none !important;
+    padding: 0px !important;
+    margin: 0px !important;
+
+    .notion-column-list{
+       align-items: flex-start !important;
+       gap: 24px !important;
+    }
 
 }
 
@@ -400,6 +407,8 @@ html ::-webkit-scrollbar-thumb {
     box-shadow: none !important;
     border: none !important;
     transform: none !important;
+    padding: 0 !important;
+    margin: 0 !important;
 }
 
 .notion-callout{
@@ -466,10 +475,6 @@ html ::-webkit-scrollbar-thumb {
 
 .notion-callout .notion-heading{
     text-align: left !important;
-}
-
-.notion-callout.border{
-    margin-bottom: 2rem !important;
 }
 
 //media queries
