--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -526,6 +526,10 @@ html ::-webkit-scrollbar-thumb {
         font-size: var(--font-size-4) !important;
     }
 
+    h2.notion-heading{
+        font-size: var(--font-size-3) !important;
+    }
+
     h3.notion-heading{
         font-size: var(--font-size-2) !important;
     }
