--- a/style/main.css
+++ b/style/main.css
@@ -972,6 +972,15 @@ html ::-webkit-scrollbar-thumb {
   #page-index .notion-callout.bg-gray-light .notion-column-list {
     flex-wrap: wrap !important;
   }
+  h1.notion-heading {
+    font-size: var(--font-size-4) !important;
+  }
+  h2.notion-heading {
+    font-size: var(--font-size-3) !important;
+  }
+  h3.notion-heading {
+    font-size: var(--font-size-2) !important;
+  }
 }
 @media screen and (max-width: 1150px) {
   .notion-collection-gallery.medium {
