--- a/style/main.css
+++ b/style/main.css
@@ -275,6 +275,7 @@ p, p.notion-text__content {
 }
 
 .super-navbar .super-navbar__content .super-navbar__item-list .super-navbar__item {
+  font-size: 0.9rem !important;
   text-transform: uppercase !important;
   font-family: "ClashGrotesk-Semibold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
   letter-spacing: 0.102rem !important;
