--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -496,7 +496,7 @@ html ::-webkit-scrollbar-thumb {
 
     .notion-collection-table tr{
         width: 100% !important;
-        padding: 3rem 5rem !important;
+        padding: 2rem !important;
 
     }
 
@@ -514,6 +514,17 @@ html ::-webkit-scrollbar-thumb {
 
     #page-index .notion-callout.bg-gray-light .notion-callout__content{
         width: 100% !important;
+    }
+
+    #page-index .notion-callout.bg-green-light {
+        padding: 0 !important;
+        margin: 0 !important;
+
+        .notion-column-list{
+        display: grid !important;
+        grid-template-columns: 1fr !important;
+    
+        }
     }
     
 }
@@ -560,17 +571,6 @@ html ::-webkit-scrollbar-thumb {
     .notion-collection-table tr{
         padding: 2rem !important;
         grid-template-columns: 1fr !important;
-    }
-
-    #page-index .notion-callout.bg-green-light {
-        padding: 0 !important;
-        margin: 0 !important;
-
-        .notion-column-list{
-        display: grid !important;
-        grid-template-columns: 1fr !important;
-    
-        }
     }
 
 }
