--- a/style/main.css
+++ b/style/main.css
@@ -916,7 +916,7 @@ html ::-webkit-scrollbar-thumb {
   }
   .notion-collection-table tr {
     width: 100% !important;
-    padding: 3rem 5rem !important;
+    padding: 2rem !important;
   }
   .notion-collection-card {
     display: block !important;
@@ -930,6 +930,14 @@ html ::-webkit-scrollbar-thumb {
   }
   #page-index .notion-callout.bg-gray-light .notion-callout__content {
     width: 100% !important;
+  }
+  #page-index .notion-callout.bg-green-light {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+  #page-index .notion-callout.bg-green-light .notion-column-list {
+    display: grid !important;
+    grid-template-columns: 1fr !important;
   }
 }
 .notion-toggle.bg-pink {
@@ -963,14 +971,6 @@ html ::-webkit-scrollbar-thumb {
   }
   .notion-collection-table tr {
     padding: 2rem !important;
-    grid-template-columns: 1fr !important;
-  }
-  #page-index .notion-callout.bg-green-light {
-    padding: 0 !important;
-    margin: 0 !important;
-  }
-  #page-index .notion-callout.bg-green-light .notion-column-list {
-    display: grid !important;
     grid-template-columns: 1fr !important;
   }
 }
