--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -52,6 +52,7 @@
     }
     .notion-heading{
         width: 80% !important;
+        margin: 3rem auto !important;
         margin-bottom: 1.5rem !important;
     }
     
