--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -618,6 +618,9 @@ html ::-webkit-scrollbar-thumb {
                 flex-basis: calc(50% - 20px) !important;
                 flex-grow: 1 !important;
             }
+            .notion-column:last-child{
+                display: none !important;
+            }
         }
     }
 
