--- a/style/main.css
+++ b/style/main.css
@@ -1011,4 +1011,7 @@ html ::-webkit-scrollbar-thumb {
     flex-basis: calc(50% - 20px) !important;
     flex-grow: 1 !important;
   }
+  .notion-callout.bg-green-light .notion-column-list .notion-column:last-child {
+    display: none !important;
+  }
 }/*# sourceMappingURL=main.css.map */
