--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,10 @@
 //home page
+.super-content{
+    max-width: 1680px !important;
+    margin: 0 auto !important;
+    display: flex !important;
+    
+}
 
 .super-content.max-width{
     margin: auto !important;
