--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -15,7 +15,7 @@
 }
 
 .notion-text{
-    min-height: 6rem !important;
+    min-height: auto !important;
 }
 .notion-heading .notion-semantic-string{
     line-height: 1 !important;
