--- a/style/main.css
+++ b/style/main.css
@@ -476,7 +476,7 @@ p, p.notion-text__content {
 }
 
 .notion-text {
-  min-height: 6rem !important;
+  min-height: auto !important;
 }
 
 .notion-heading .notion-semantic-string {
