--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -17,6 +17,11 @@
 .notion-text{
     min-height: auto !important;
 }
+
+.notion-text p {
+    margin-bottom: 12px !important;
+}
+
 .notion-heading .notion-semantic-string{
     line-height: 1 !important;
 }
