--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -451,6 +451,7 @@ html ::-webkit-scrollbar-thumb {
     font-size: var(--font-size-1) !important;
 
     .notion-column-list{
+        align-items: center !important;
         flex-wrap: wrap !important;
     }
 
