--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -130,7 +130,7 @@ tbody.notion-collection-table__body{
     overflow: inherit !important;
 }
 
- .notion-property.notion-property__file.property-63756178 a div{
+ .notion-property.notion-property__file a div{
     width: 100% !important;
     height: 300px !important;
 
