--- a/style/main.css
+++ b/style/main.css
@@ -595,6 +595,11 @@ tbody.notion-collection-table__body {
   object-fit: cover !important;
 }
 
+.notion-pill {
+  background: var(--color-callout-background) !important;
+  color: var(--color-cta-text) !important;
+}
+
 /* .notion-collection-table__cell:nth-child(1){
     margin-top: -6rem !important;
 } */
