--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -141,7 +141,7 @@ tbody.notion-collection-table__body{
 }
 
 .notion-pill{
-    background: var(--color-callout-background) !important;
+    background: var(--color-link-default) !important;
     color: var(--color-cta-text) !important;
 }
 
