--- a/style/main.css
+++ b/style/main.css
@@ -914,13 +914,11 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-callout .notion-column-list .notion-image {
-  width: 55px !important;
-  height: 55px !important;
-  border-radius: 50% !important;
+  border-radius: 10px !important;
 }
 
 .notion-callout .notion-column-list .notion-image img {
-  border-radius: 50% !important;
+  width: 55px !important;
 }
 
 .notion-callout__content {
