reciew image radius 50%

--- a/style/main.css
+++ b/style/main.css
@@ -917,6 +917,10 @@ html ::-webkit-scrollbar-thumb {
   border-radius: 10px !important;
 }
 
+.notion-image.normal img {
+  border-radius: 50% !important;
+}
+
 .notion-callout .notion-column-list .notion-image img {
   width: 55px !important;
 }
