--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -495,6 +495,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-callout .notion-column-list .notion-image{
+    width: 55px;
     border-radius: 10px !important;
 }
 
