remove notion-image img

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -503,9 +503,9 @@ html ::-webkit-scrollbar-thumb {
     border-radius: 50% !important;
 }
 
-.notion-callout .notion-column-list .notion-image img{
+/* .notion-callout .notion-column-list .notion-image img{
     width: 55px !important;
-}
+} */
 
 .notion-callout__content{
     overflow: visible !important;
