--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -628,6 +628,14 @@ html ::-webkit-scrollbar-thumb {
 }
 
 @media screen and (max-width:1150px){
+
+    h1.notion-heading{
+        font-size: var(--font-size-4) !important;
+    }
+
+    h2.notion-heading{
+        font-size: var(--font-size-3) !important;
+    }
     .notion-collection-gallery.medium{
         grid-template-columns: 1fr !important;
     }
