--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -128,7 +128,7 @@ tbody.notion-collection-table__body{
 
  .notion-property.notion-property__file a div{
     width: 100% !important;
-    height: 300px !important;
+    height: 600px !important;
 
     img{
         border-radius: 8px !important;
@@ -628,6 +628,9 @@ html ::-webkit-scrollbar-thumb {
 }
 
 @media screen and (max-width:1150px){
+    .notion-property.notion-property__file a div{
+        height: 300px !important;
+    }
 
     h1.notion-heading{
         font-size: var(--font-size-4) !important;
