--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -500,7 +500,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-image.page-width img{
-    border-radius: 10% !important;
+    border-radius: 10px !important;
 }
 
 /* .notion-callout .notion-column-list .notion-image img{
