flex start on close hamburger menu

--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -75,6 +75,10 @@
     display: block !important;
   }
 
+  .super-navbar__menu-close{
+    align-items: flex-start !important;
+  }
+
 
 //toggle light and dark theme
 .toggle-switch{
