--- a/style/main.css
+++ b/style/main.css
@@ -331,6 +331,10 @@ p, p.notion-text__content {
   display: block !important;
 }
 
+.super-navbar__menu-close {
+  align-items: flex-start !important;
+}
+
 .toggle-switch {
   width: 22px !important;
   height: 22px !important;
