--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -60,7 +60,7 @@ tbody.notion-collection-table__body{
 .notion-collection-table{
 /*     display: flex !important; */
     justify-content: left !important;
-    table-layout: unset !important;
+    /* table-layout: unset !important; */
     border-top: none !important;
     border-collapse: unset !important;
 }
