--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -55,6 +55,20 @@
         margin: 3rem auto !important;
         margin-bottom: 0.5rem !important;
     }
+
+    .notion-collection-gallery{
+        width: 80% !important;
+        margin: 0 auto !important;
+    }
+
+    .notion-callout{
+        width: 80% !important;
+    }
+
+    .notion-collection-table__wrapper{
+        width: 80% !important;
+        margin: 0 auto !important;
+    }
     
 }
 
