--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -65,6 +65,7 @@
         width: auto !important;
         border-radius: 20px !important;
         margin: 0 auto !important;
+        left: 0 !important;
         .notion-callout__content{
             max-width: 90% !important;
             margin: 20px auto !important;
