--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -425,9 +425,11 @@ html ::-webkit-scrollbar-thumb {
        align-items: flex-start !important;
        gap: 24px !important;
 
+       .notion-column:first-child{
+        max-width: fit-content !important;
+       }
        .notion-column{
         flex-grow: 1 !important;
-        max-width: fit-content !important;
        }
     }
 
