--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -45,6 +45,8 @@
 }
 
 .parent-page__index {
+    width: 80% !important;
+    margin: 0 auto !important;
 
     .notion-text{
         width: 80% !important;
@@ -59,6 +61,10 @@
     .notion-collection-gallery{
         width: 80% !important;
         margin: 0 auto !important;
+    }
+
+    .notion-bulleted-list{
+        width: 80% !important;
     }
 
     .notion-callout.bg-gray-light{
