--- a/style/main.css
+++ b/style/main.css
@@ -450,6 +450,11 @@ p, p.notion-text__content {
 }
 .parent-page__index .notion-bulleted-list {
   width: 80% !important;
+  margin: 0 auto;
+}
+.parent-page__index .notion-code pre {
+  width: 80% !important;
+  margin: 0 auto !important;
 }
 .parent-page__index .notion-callout.bg-gray-light {
   width: auto !important;
